...
                }
                ToolbarItem(placement: .primaryAction) {
                    Button {
                        selectedMilestone = nil // Make sure no previous event is selected
                        showingAddMilestone = true
                    } label: {
                        Image(systemName: "plus.circle.fill")
                            .font(.title2)
                    }
                }
            }
            .sheet(isPresented: $showingAddMilestone) {
                AddMilestoneView(milestoneToEdit: nil)
...
